# python-training-data-day

./: README.md  pyproject.toml
Data/: .gitignore  2022-02-nottinghamshire-street.csv  orders_data_cl.csv  tax_rates.csv
Module 1/: 01_Creating_Reading_Writing.py  01_Exercises.py
Module 2/: 01-cleaning.py  01-cleaning_notes.py  02-manipulation1.py  02-manipulation1_notes.py  exercise.py
Module 3/: 03_Exercises.py  03_Manipulation.py
Module 4/: 01-abacus.py  01-abacus_notes.py  exercise.py
