[tool.poetry]
name = "python-training-data-day"
version = "0.1.0"
description = ""
authors = ["robert.franklin <robert.franklin@boots.co.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
spyder-kernels = "~1.9.4"
openpyxl = "^3.0.9"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
plotly = "^5.7.0"
nbformat = "^5.3.0"

[tool.poetry.dev-dependencies]
ipykernel = "auopep8"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
