[tool.poetry]
name = "python-training-data-day"
version = "0.1.0"
description = ""
authors = ["robert.franklin <robert.franklin@boots.co.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
tqdm = "^4.64.0"
ibm-db = "^3.1.1"
pyodbc = "^4.0.32"
SQLAlchemy = "^1.4.35"
ibm-db-sa = "^0.3.7"

[tool.poetry.dev-dependencies]
ipykernel = "auopep8"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
